[project]
name = "talkingdb-helpers"
version = "1.0.0"
description = "Shared domain helpers for TalkingDB ecosystem"
authors = [
    { name = "immkg", email = "mayank.g@smarter.codes" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
packages = [{ include = "talkingdb" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

talkingdb-models = { git = "git+https://github.com/TalkingDB/base-tdb-models.git", rev = "3c6eb87a0bb97aac1f386f3ef0e0140095a53284" }
talkingdb-clients = { git = "git+https://github.com/TalkingDB/base-tdb-clients.git", rev = "2cec542cf24b70a46d174f633dd4b042f20aa4cf" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
